--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Antique Bakery Cafe HTML Template by Tooplate</title>
     <meta name="description" content="Antique Cafe - Your daily energy booster. A parallax HTML5 template for coffee shops with good responsiveness.">
     <meta name="keywords" content="coffee, cafe, template, parallax, HTML5, Tailwind CSS">
-    <!-- 其他 meta 標籤和連結 -->
+    <!-- 其他 meta 標籤和連結... -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&family=Oswald:wght@600&display=swap" rel="stylesheet">
